--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -20,7 +20,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-   - name: setup node js environment
+   - name: node js setup
      uses: actions/setup-node@v2-beta
   with: 
    version: 12
