--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -19,16 +19,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      
-   - name: node js setup
-     uses: actions/setup-node@v2-beta
-  with: 
-   version: 12
-   
-  - name: GitHub Action for Yarn
-  # You may pin to the exact commit or the version.
-  # uses: Borales/actions-yarn@4965e1a0f0ae9c422a9a5748ebd1fb5e097d22b9
-  uses: Borales/actions-yarn@v2.3.0
+    - name: node js setup
+    uses: actions/setup-node@v2-beta
+    with: 
+       version: 12
+       
+- name: yarn
+uses: Borales/actions-yarn@v2.3.0
   with:
     # Yarn command
     cmd: install
