--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -1,13 +1,15 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deployment
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
+# events but only for the master branch
 on:
   push:
-    branches: [ main ]
- 
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -17,24 +19,28 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - name: node js setup
-    uses: actions/setup-node@v2-beta
-    with: 
-       version: 12
-       
-- name: yarn
-uses: Borales/actions-yarn@v2.3.0
-  with:
-    # Yarn command
-    cmd: install
     
-  - name: build
-    run: yarn build
+    # Install NodeJS
+    - name: Install NodeJS
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: 12
     
-  - name: installing surge
-    run: npm install -g surge
+    # Install Yarn
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: install # will run `yarn install` command
+        
+    # Build React App with Yarn
+    - name: Build React App
+      run: yarn build
     
- - name: deploy on surge
-   run: surge ./build http://erect-jellyfish.surge.sh/ --token ${{secrets.surge_token}}
+    # Install Surge
+    - name: Install Surge
+      run: npm install --global surge
+    
+    # Deploy Surge
+    - name: Deploy React App to Surge
+      run: surge ./build http://erect-jellyfish.surge.sh/ --token ${{secrets.SURGE_TOKEN }}
