--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -43,4 +43,4 @@ jobs:
     
     # Deploy Surge
     - name: Deploy React App to Surge
-      run: surge ./build http://erect-jellyfish.surge.sh/ --token ${{secrets.SURGE_TOKEN }}
+      run: surge ./build http://erect-jellyfish.surge.sh/ --token ${{secrets.surge_token}}
